--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@500&display=swap');
+
 .App {
-  text-align: center;
+  font-family: 'Hind', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#myElement {
+  font-size: 30px;
+  letter-spacing: 2px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.ityped-cursor {
+  font-size: 2.2rem;
+  opacity: 1;
+  -webkit-animation: blink 0.3s infinite;
+  -moz-animation: blink 0.3s infinite;
+  animation: blink 0.3s infinite;
+  animation-direction: alternate;
+}
+
+@keyframes blink {
+  100% {
+      opacity: 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@-webkit-keyframes blink {
+  100% {
+      opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@-moz-keyframes blink {
+  100% {
+      opacity: 0;
   }
 }
