--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@500&display=swap');
 
+/*App styles*/
+
 .App {
   font-family: 'Hind', sans-serif;
+  padding: 250px 50px;
+  text-align: center;
+}
+
+h1 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-size: 45px;
 }
 
 #myElement {
   font-size: 30px;
   letter-spacing: 2px;
+  color: #697B87;
 }
+
+/*starts iTyped cursor styles*/
 
 .ityped-cursor {
   font-size: 2.2rem;
